# cophi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  get_bitcode.py  partial_extract.py  phasar_test.cpp  test_extract.py  todo.txt
.devcontainer/: devcontainer.json
dockerfiles/: dcpp_extract.Dockerfile  dcpp_filter.Dockerfile  dcpp_scrape.Dockerfile  feature_extractor.Dockerfile  partial_extract.Dockerfile  scrape_bitcode.Dockerfile  tu-dortmund-server-extract.Dockerfile
entrypoints/: extract_entrypoint.py  filter_entrypoint.py  vol_paths.py
example_configs/: config.json  filters.json
scraper/: __main__.py  bitcode_extractor.py  output_json.py  package_cache.py
small_bitcode/: packages.json
small_bitcode/bison/3.8.2/: bison.bc  liby.a.bc  metadata.json
small_bitcode/boost/1.80.0/: libboost_atomic.a.bc  libboost_chrono.a.bc  libboost_container.a.bc  libboost_contract.a.bc  libboost_coroutine.a.bc  libboost_date_time.a.bc  libboost_exception.a.bc  libboost_fiber.a.bc  libboost_fiber_numa.a.bc  libboost_filesystem.a.bc  libboost_iostreams.a.bc  libboost_json.a.bc  libboost_locale.a.bc  libboost_nowide.a.bc  libboost_prg_exec_monitor.a.bc  libboost_program_options.a.bc  libboost_random.a.bc  libboost_regex.a.bc  libboost_stacktrace_addr2line.a.bc  libboost_stacktrace_backtrace.a.bc  libboost_stacktrace_basic.a.bc  libboost_stacktrace_noop.a.bc  libboost_system.a.bc  libboost_thread.a.bc  libboost_timer.a.bc  libboost_type_erasure.a.bc  metadata.json
small_bitcode/brotli/1.1.0/: libbrotlicommon.a.bc  libbrotlidec.a.bc  metadata.json
small_bitcode/bzip2/1.0.8/: bzip2.bc  libbz2.a.bc  metadata.json
small_bitcode/double-conversion/3.3.0/: libdouble-conversion.a.bc  metadata.json
small_bitcode/easy_profiler/2.1.0/: libeasy_profiler.a.bc  metadata.json
small_bitcode/expat/2.6.2/: libexpat.a.bc  metadata.json
small_bitcode/flex/2.6.4/: flex++.bc  libfl.a.bc  metadata.json
small_bitcode/fontconfig/2.15.0/: libfontconfig.a.bc  metadata.json
small_bitcode/freetype/2.13.2/: metadata.json
small_bitcode/glib/2.78.3/: gio-launch-desktop.bc  gtester.bc  libgmodule-2.0.a.bc  libgobject-2.0.a.bc  libgthread-2.0.a.bc  metadata.json
small_bitcode/gperf/3.1/: gperf.bc  metadata.json
small_bitcode/harfbuzz/8.3.0/: libharfbuzz-gobject.a.bc  metadata.json
small_bitcode/icu/74.2/: escapesrc.bc  genccode.bc  gencmn.bc  gencnval.bc  gendict.bc  gennorm2.bc  gensprep.bc  icuexportdata.bc  libicudata.a.bc  libicuio.a.bc  libicutest.a.bc  libicutu.a.bc  makeconv.bc  metadata.json
small_bitcode/innoextract/1.9.0/: innoextract.bc  metadata.json
small_bitcode/libbacktrace/cci.20210118/: libbacktrace.a.bc  metadata.json
small_bitcode/libelf/0.8.13/: libelf.a.bc  metadata.json
small_bitcode/libfreenect/0.7.0/: libfreenect.a.bc  metadata.json
small_bitcode/libiconv/1.17/: iconv.bc  libcharset.a.bc  libiconv.a.bc  metadata.json
small_bitcode/libmount/2.39/: libblkid.a.bc  libmount.a.bc  metadata.json
small_bitcode/libpq/15.4/: libpgcommon.a.bc  libpgcommon_shlib.a.bc  libpgport.a.bc  libpgport_shlib.a.bc  libpq.a.bc  metadata.json  pg_config.bc
small_bitcode/libselinux/3.5/: libselinux.a.bc  metadata.json
small_bitcode/libtool/2.4.7/: libltdl.a.bc  metadata.json
small_bitcode/libusb/1.0.26/: libusb-1.0.a.bc  metadata.json
small_bitcode/libxml2/2.12.7/: metadata.json
small_bitcode/m4/1.4.19/: m4.bc  metadata.json
small_bitcode/md4c/0.4.8/: libmd4c-html.a.bc  libmd4c.a.bc  md2html.bc  metadata.json
small_bitcode/ninja/1.11.1/: metadata.json
small_bitcode/odbc/2.3.11/: dltest.bc  libodbc.a.bc  libodbccr.a.bc  libodbcinst.a.bc  metadata.json  odbc_config.bc  odbcinst.bc
small_bitcode/openssl/3.2.2/: metadata.json
small_bitcode/pcre2/10.42/: libpcre2-16.a.bc  libpcre2-32.a.bc  libpcre2-8.a.bc  libpcre2-posix.a.bc  metadata.json  pcre2grep.bc
small_bitcode/pkgconf/2.0.3/: metadata.json  pkgconf.bc
small_bitcode/pkgconf/2.1.0/: metadata.json  pkgconf.bc
small_bitcode/pkgconf/2.2.0/: metadata.json  pkgconf.bc
small_bitcode/sqlite3/3.45.0/: metadata.json
small_bitcode/util-linux-libuuid/2.39.2/: libuuid.a.bc  metadata.json
small_bitcode/wayland/1.22.0/: libwayland-client.a.bc  libwayland-cursor.a.bc  libwayland-egl.a.bc  libwayland-server.a.bc  metadata.json
small_bitcode/xkbcommon/1.5.0/: libxkbcommon-x11.a.bc  libxkbcommon.a.bc  libxkbregistry.a.bc  metadata.json  xkbcli-compile-keymap.bc  xkbcli-how-to-type.bc  xkbcli-interactive-evdev.bc  xkbcli-interactive-wayland.bc  xkbcli-interactive-x11.bc  xkbcli.bc
small_bitcode/xz_utils/5.2.5/: liblzma.a.bc  lzmadec.bc  lzmainfo.bc  metadata.json  unlzma.bc  xzdec.bc
small_bitcode/zlib/1.3.1/: libz.a.bc  metadata.json
src/: main.cpp
src/core/: attr_mapping.hpp  attribute.cpp  attribute.hpp  bin_attr_map.cpp  bin_attr_map.hpp  binary.cpp  binary.hpp  corpus_analyzer.cpp  corpus_analyzer.hpp  feature_data.cpp  feature_data.hpp  feature_map.cpp  feature_map.hpp  feature_query.cpp  feature_query.hpp  filter.cpp  filter.hpp  package.cpp  package.hpp  package_analyzer.hpp  query_registry.hpp
src/core/globals/: globals.cpp  globals.hpp
src/core/queries/: bintype_query.cpp  bintype_query.hpp  call_graph_size_query.cpp  call_graph_size_query.hpp  is_exec_query.cpp  is_exec_query.hpp  longest_inheritance_chain_query.cpp  longest_inheritance_chain_query.hpp  num_instructions_query.cpp  num_instructions_query.hpp
src/core/queries/utils/: graph_utils.cpp  graph_utils.hpp  query_utils.cpp  query_utils.hpp
src/execs/: dcpp_equal.cpp  dcpp_extract.cpp  dcpp_extract_old.cpp  dcpp_filter.cpp  dcpp_partial_extract.cpp  main.cpp
src/utils/: exec_utils.hpp  json_parsers.hpp  json_utils.cpp  json_utils.hpp  logging.hpp  multithreading_utils.cpp  multithreading_utils.hpp
test_bitcode/: an_exec.cpp  an_exec.ll  buncha_calls.ll  buncha_classes.cpp  buncha_classes.ll  just_main_basically.ll  not_an_exec.cpp  not_an_exec.ll  packages.json
tests/: filter_test.cpp  query_tests.cpp
